<resources>
    <string name="app_name">Geo Quiz</string>
    <string name="game_2">Geo Quiz </string>
    <string name="game_1">Quiz</string>
    <string name="title_activity_maps">Map</string>
    <string name="add">Start </string>
    <string name="close_app">close App</string>
    <string name="high_score">High score</string>
    <string name="back">Back</string>
    <string name="start_game">Start game</string>
    <string name="newQ">new</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
